ymls/consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
spec:
  selector:
    matchLabels:
      app: consumer
  replicas: 2
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: namimono/second-cloud-consumer:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 9000

---
apiVersion: v1
kind: Service
metadata:
  name: consumer
  labels:
    svc: consumer
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: consumer
